setting up api documentation